Changed Multimedia Sensation to Multimedia Blogspot.

--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
                   <a class="logo" href="index.html">            
                   Multimedia<span>Shadows</span>
                   </a>            
-                  <h1>Multimedia Sensation</h1>
+                  <h1>Multimedia Blogspot</h1>
                   <ul class="top-ul right">
                      <li>            
                         <a href="index.html">Blog</a>  
