--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                   <a class="logo" href="index.html">            
                   Multimedia<span>Shadows</span>
                   </a>            
-                  <h1>Multimedia Sensation</h1>
+                  <h1>Multimedia Blogspot</h1>
                   <ul class="top-ul right">
                      <li>            
                         <a href="index.html">Blog</a>            
@@ -38,13 +38,14 @@
                      <li>            
                         <a href="about.html">Trending</a>            
                      </li>
-                     <li>            
-                        <a href="archive.html">Archive</a>            
+                      <li>            
+                        <a href="event.html">Events</a>            
                      </li>
                      <li>            
-                        <a href="contact.html">Contact</a>            
+                        <a href="subscribe.html">Subscribe</a>            
                      </li>
-                     <div class="social right">	           
+                      
+                      <div class="social right">	           
                         <a target="_blank" href="https://www.facebook.com/mmushadows">
                         <i class="icon-facebook_circle icon2x"></i>
                         </a>          
