I have linked the idex page to the subscription page

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <a href="event.html">Events</a>            
                      </li>
                      <li>            
-                        <a href="subscribe.html">Subscribe</a>            
+                        <a href="subscription.php">Subscribe</a>            
                      </li>
                       
                       <div class="social right">	           
