edit part of blog

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                      <a href="post-1.html">
                         <h2>Multimedia Top Ten Finest Divas</h2>
                      </a>
-                     <p>Lorem ipsum dolor sit amet, conse ctetuer. Duis autem vemeu iriure dolor adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat wisi enim.             
+                     <p> With its high number of diverse courses Multimedia University of Kenya has many Pretty divas who not only have the most beautiful faces but also the cut edging curves.I didnt mean all though...          
                      </p>
                   </div>
                   <!-- date -->                 
