--- a/event.html
+++ b/event.html
@@ -43,7 +43,7 @@
                         <a href="archive.html">Archive</a>            
                      </li>
                          <li>            
-                        <a href="contacts.html">Contacts</a>            
+                        <a href="contact.html">Contacts</a>            
                      </li>
                      <div class="social right">	           
                         <a target="_blank" href="https://www.facebook.com/mmushadows">
