edit source code

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                   <!-- image -->                 
                   <div class="s-12 l-6 post-image">                   
                      <a href="post-1.html">
-                     <img src="img/post1.jpg" alt="Fashion 1">
+                     <img src="img/TUYRYGJHLKO.jpg" alt="Fashion 1">
                      </a>                
                   </div>
                   <!-- text -->                 
@@ -121,7 +121,7 @@
                   <!-- text -->                 
                   <div class="s-12 l-5 post-text">
                      <a href="post-3.html">
-                        <h2>Multimedia's Wannabes</h2>
+                        <h2>Finest Photography</h2>
                      </a>
                      <p>Lorem ipsum dolor sit amet, conse ctetuer. Duis autem vemeu iriure dolor adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat wisi enim.                 
                   </div>
