changed the description of the webpage

--- a/event.html
+++ b/event.html
@@ -5,7 +5,7 @@
       <meta name="viewport" content="width=device-width" />
       <title>Multimedia Shadows| About Me
       </title>
-      <meta name="description" content="Download free amazing responsive Fashion Blog template."/>
+      <meta name="description" content="Take a look at all the Hot and trending stuff going around Multimedia University of Kenya.This is the number one blogspot featuring the craziest campus experience"/>
       <meta name="keywords" content="free, responsive, blog, fashion"/>
       <link rel="stylesheet" href="css/components.css">
       <link rel="stylesheet" href="css/responsee.css">
