--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <meta name="viewport" content="width=device-width" />
       <title> Multimedia Shadows
       </title>
-      <meta name="description" content="Download free amazing responsive Fashion Blog template."/>
+      <meta name="description" content="Take a look at all the Hot and trending stuff going around Multimedia University of Kenya.This is the number one blogspot featuring the craziest campus experience"/>
       <meta name="keywords" content="free, responsive, blog, fashion, web site, template"/>
       <link rel="stylesheet" href="css/components.css">
       <link rel="stylesheet" href="css/responsee.css">
@@ -100,7 +100,8 @@
                      <a href="post-2.html">
                         <h2>Most Influential Students</h2>
                      </a>
-                     <p>Lorem ipsum dolor sit amet, conse ctetuer. Duis autem vemeu iriure dolor adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat wisi enim.             
+                     <p>Michael a.k.a "Kamau",the handsome dude...the guy whose got almost all pretty ladies!!! He is a famous hacker and also does some coding. Good in finding stories and will surely keep this blog upto date with hot stories.
+
                      </p>
                   </div>
                   <!-- date -->                 
