--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                   <!-- image -->                 
                   <div class="s-12 l-6 post-image">                   
                      <a href="post-1.html">
-                     <img src="img/TUYRYGJHLKO.jpg" alt="Fashion 1">
+                     <img src="img/IMG-20170509-WA0004.jpg" alt="Fashion 1">
                      </a>                
                   </div>
                   <!-- text -->                 
