--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
                      <a href="post-1.html">
                         <h2>Multimedia Top Ten Finest Divas</h2>
                      </a>
-                     <p> With its high number of diverse courses Multimedia University of Kenya has many Pretty divas who not only have the most beautiful faces but also the cut edging curves.I didnt mean all though...          
+                     <p> With its high number of diverse courses Multimedia University of Kenya has many Pretty divas who not only have the most beautiful faces but also the cut edging curves.I didnt mean all though...   </p>
+                     <a class="continue-reading" href="post-1.html">Continue reading</a>        
 
                   </div>
                   <!-- date -->
@@ -100,7 +101,7 @@
                   <!-- image -->
                   <div class="s-12 l-6 post-image">
                      <a href="post-2.html">
-                     <img src="img/post2.jpg" alt="Fashion 2">
+                     <img src="img/post2.jpg" alt="fashion2.jpg">
                      </a>
                   </div>
                   <!-- text -->
@@ -108,13 +109,8 @@
                      <a href="post-2.html">
                         <h2>Most Influential Students</h2>
                      </a>
-<<<<<<< HEAD
-
-=======
->>>>>>> e9a99507b724aac6b2c41d1579da7f8eed1f9f4e
-                     <p>Michael a.k.a "Kamau",the handsome dude...the guy whose got almost all pretty ladies!!! He is a famous hacker and also does some coding. Good in finding stories and will surely keep this blog upto date with hot stories.
-
-                     </p>
+                     <p>Michael a.k.a "Kamau",the handsome dude...the guy whose got many of the pretty ladies!!! He is a grey hacker and also does some little of coding. Good in finding stories and will surely keep this blog upto date with hot stories.  </p>
+                     <a class="continue-reading" href="post-2.html">Continue reading</a> 
                   </div>
                   <!-- date -->
                   <div class="s-12 l-1 post-date">
@@ -136,7 +132,8 @@
                      <a href="post-3.html">
                         <h2>Finest Photography</h2>
                      </a>
-                     <p>Lorem ipsum dolor sit amet, conse ctetuer. Duis autem vemeu iriure dolor adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat wisi enim.
+                     <p>Lorem ipsum dolor sit amet, conse ctetuer. Duis autem vemeu iriure dolor adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat wisi enim.</p>
+                               <a class="continue-reading" href="post-3.html">Continue reading</a> 
                   </div>
                   <!-- date -->
                   <div class="s-12 l-1 post-date">
@@ -158,7 +155,8 @@
                      <a href="post-4.html">
                         <h2>Multimedia Forbes List</h2>
                      </a>
-                     <p>Lorem ipsum dolor sit amet, conse ctetuer. Duis autem vemeu iriure dolor adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat wisi enim.
+                     <p>Lorem ipsum dolor sit amet, conse ctetuer. Duis autem vemeu iriure dolor adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat wisi enim.</p>
+                     <a class="continue-reading" href="post-4.html">Continue reading</a> 
                   </div>
                   <!-- date -->
                   <div class="s-12 l-1 post-date">
@@ -177,6 +175,7 @@
                         <h2>Just for ladies!Mmu Hot Dudes</h2>
                      </a>
                      <p>Lorem ipsum dolor sit amet, conse ctetuer. Duis autem vemeu iriure dolor adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam</p>
+                     <a class="continue-reading" href="post-5.html">Continue reading</a> 
                   </div>
                   <!-- date -->
                   <div class="s-12 l-1 post-date">
@@ -193,21 +192,21 @@
             <div class="s-12 l-3">
                <aside>
                   <!-- NEWS 1 -->
-                  <img src="img/news1.jpg" alt="News 1">
+                  <img src="img/DSC_7966.JPG" alt="fashion">
                   <div class="aside-block margin-bottom">
-                     <h3>This is the first Multimedia University news  blog</h3>
-                     <p>Lorem ipsum dolor sit amet, conse ctetuer. Duis autem vemeu iriure dolor adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam</p>
+                     <h3>Entertainment Blog</h3>
+                     <p>Multimedia Shadows is the first and only Multimedia University entertainment blog.This is the realest site that posts on what is hot and trending in MMU Kenya.This blog gives you the sneack sniff on the top ten prettiest chicks and top five hot dudes in Multimedia.Being the number one media and technology university,this blog gives you a diverse events line up and the best places to hang out.</p>
                   </div>
                   <!-- NEWS 2 -->
-                  <img src="img/news2.jpg" alt="News 2">
+                  <img src="img/DSCN9947.JPG" alt="News 2">
                   <div class="aside-block margin-bottom">
-                     <h3>Sports Action</h3>
+                     <h3>Scandal Slot!!</h3>
                      <p>Lorem ipsum dolor sit amet, conse ctetuer. Duis autem vemeu iriure dolor adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam</p>
                   </div>
 
                   <!-- AD REGION -->
                   <div class="advertising margin-bottom">
-                     <img src="img/banner.jpg" alt="ad banner">
+                     <img src="img/IMG-20170502-WA0007.jpg" alt="ad banner">
                   </div>
                </aside>
             </div>
