--- a/post-4.html
+++ b/post-4.html
@@ -127,14 +127,15 @@
             <div class="s-12 l-3">
                <aside>
                   <!-- NEWS 1 -->           
-                  <img src="img/news1.jpg" alt="News 1">          
+                  <img src="img/DSC_7966.JPG" alt="News 1">          
+                  <img src="img/" alt="News 1">          
                   <div class="aside-block margin-bottom">
-                     <h3>This is the first  Multimedia University news blog</h3>
-                     <p>Lorem ipsum dolor sit amet, conse ctetuer. Duis autem vemeu iriure dolor adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam</p>
+                     <h3>Entertainment Blog</h3>
+                     <p>Multimedia Shadows is the first and only Multimedia University entertainment blog.This is the realest site that posts on what is hot and trending in MMU Kenya.This blog gives you the sneack sniff on the top ten prettiest chicks and top five hot dudes in Multimedia.Being the number one media and technology university,this blog gives you a diverse events line up and the best places to hang out.</p>
                   </div>
                   <!-- AD REGION --> 
                   <div class="advertising margin-bottom">
-                     <img src="img/banner.jpg" alt="ad banner">         
+                     <img src="img/IMG-20170502-WA0007.jpg" alt="ad banner">         
                   </div>
                   <!-- LATEST POSTS -->
                   <div class="aside-block margin-bottom">
