--- a/post-5.html
+++ b/post-5.html
@@ -82,7 +82,7 @@
                         augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming 
                         id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem.
                      </p>
-                     <img src="img/FB_IMG_14943307476207611.jpg" alt="Dude">
+                     <img src="img/kamau.jpg" alt="Dude">
                      <p>
                         Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum 
                         dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit 
@@ -131,14 +131,14 @@
             <div class="s-12 l-3">
                <aside>
                   <!-- NEWS 1 -->           
-                  <img src="img/news1.jpg" alt="News 1">          
+                  <img src="img/DSC_7966.JPG" alt="News 1">          
                   <div class="aside-block margin-bottom">
-                     <h3>This is the first Multimedia University news blog</h3>
-                     <p>Lorem ipsum dolor sit amet, conse ctetuer. Duis autem vemeu iriure dolor adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam</p>
+                     <h3>Entertainment blog</h3>
+                     <p>Multimedia Shadows is the first and only Multimedia University entertainment blog.This is the realest site that posts on what is hot and trending in MMU Kenya.This blog gives you the sneack sniff on the top ten prettiest chicks and top five hot dudes in Multimedia.Being the number one media and technology university,this blog gives you a diverse events line up and the best places to hang out.</p>
                   </div>
                   <!-- AD REGION --> 
                   <div class="advertising margin-bottom">
-                     <img src="img/banner.jpg" alt="ad banner">        
+                     <img src="img/IMG-20170430-WA0016.jpg" alt="ad banner">        
                   </div>
                   <!-- LATEST POSTS -->
                   <div class="aside-block margin-bottom">
@@ -156,7 +156,7 @@
                         </p>
                      </a>
                      <a class="latest-posts" href="post-3.html">
-                        <h5>Multimedia's Wannabes</h5>
+                        <h5>Finest Photography</h5>
                         <p>
                            Duis autem vemeu iriure dolor adipiscing elit, sed diam...
                         </p>
