--- a/contact.html
+++ b/contact.html
@@ -104,7 +104,7 @@
                <aside>
                   <!-- AD REGION --> 
                   <div class="advertising margin-bottom">
-                     <img src="img/banner.jpg" alt="ad banner">         
+                     <img src="img/IMG-20170502-WA0007.jpg" alt="ad banner">         
                   </div>
                </aside>
             </div>
