--- a/index.html
+++ b/index.html
@@ -70,13 +70,32 @@
          <div class="margin">
             <!-- ARTICLES -->
             <div class="s-12 l-9">
-
-               <!-- ARTICLE 1 -->
+                           <!-- ARTICLE 1 -->
                <article class="post-1 line">
                   <!-- image -->
                   <div class="s-12 l-6 post-image">
+                     <a href="post-.html">
+                     <img src="img/IMG-20170511-WA0002.jpg" alt="Fashion 1">
+                     </a>                
+
+                  </div>
+                  <!-- text -->
+                  <div class="s-12 l-5 post-text">
                      <a href="post-1.html">
-                     <img src="img/IMG-20170509-WA0004.jpg" alt="Fashion 1">
+                     </a>
+                     <H2>Multimedia University</H2>
+                     <p>Multimedia Shadows is the first and only Multimedia University entertainment blog.This is the realest site that posts on what is hot and trending in MMU Kenya.</p>
+
+                  </div>
+
+               <!-- ARTICLE 2-->
+               <article class="post-1 line">
+                  <!-- image -->
+
+               <article class="post-2 right-align line">
+                  <div class="s-12 l-6 post-image">
+                     <a href="post-1.html">
+                     <img src="img/IMG-20170519-WA0057.jpg" alt="Fashion 1">
                      </a>                
 
                   </div>
@@ -85,7 +104,7 @@
                      <a href="post-1.html">
                         <h2>Multimedia Top Ten Finest Divas</h2>
                      </a>
-                     <p> With its high number of diverse courses Multimedia University of Kenya has many Pretty divas who not only have the most beautiful faces but also the cut edging curves.I didnt mean all though...   </p>
+                     <p> With its high number of diverse courses Multimedia University of Kenya has many Pretty divas who not only have the most beautiful faces but also the cut edging curves.... </p>
                      <a class="continue-reading" href="post-1.html">Continue reading</a>        
 
                   </div>
@@ -97,7 +116,7 @@
                </article>
 
                <!-- ARTICLE 2 -->
-               <article class="post-2 right-align line">
+               <article class="post-2 left-align line">
                   <!-- image -->
                   <div class="s-12 l-6 post-image">
                      <a href="post-2.html">
@@ -107,7 +126,7 @@
                   <!-- text -->
                   <div class="s-12 l-5 post-text">
                      <a href="post-2.html">
-                        <h2>Most Influential Students</h2>
+                        <h2>Trend Setters</h2>
                      </a>
                      <p>Michael a.k.a "Kamau",the handsome dude...the guy whose got many of the pretty ladies!!! He is a grey hacker and also does some little of coding. Good in finding stories and will surely keep this blog upto date with hot stories.  </p>
                      <a class="continue-reading" href="post-2.html">Continue reading</a> 
@@ -122,9 +141,11 @@
                <!-- ARTICLE 3 -->
                <article class="post-3 line">
                   <!-- image -->
+
+               <article class="post-3 right-align line">
                   <div class="s-12 l-6 post-image">
                      <a href="post-3.html">
-                     <img src="img/post3.jpg" alt="Fashion 3">
+                     <img src="img/DonCliq_Photography Fam 20170519_151807.jpg" alt="Fashion 3">
                      </a>
                   </div>
                   <!-- text -->
@@ -132,7 +153,7 @@
                      <a href="post-3.html">
                         <h2>Finest Photography</h2>
                      </a>
-                     <p>Lorem ipsum dolor sit amet, conse ctetuer. Duis autem vemeu iriure dolor adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat wisi enim.</p>
+                     <p>Ever found a hard time looking for the perfect photographers?MMU Shadows gives you a top list of the three finest photographers to choose from.</p>
                                <a class="continue-reading" href="post-3.html">Continue reading</a> 
                   </div>
                   <!-- date -->
@@ -143,11 +164,11 @@
                </article>
 
                <!-- ARTICLE 4 -->
-               <article class="post-4 right-align line">
+               <article class="post-4 left-align line">
                   <!-- image -->
                   <div class="s-12 l-6 post-image">
                      <a href="post-4.html">
-                     <img src="img/post4.jpg" alt="Fashion 4">
+                     <img src="img/mercy wekesa 20170519_151743.jpg" alt="Fashion 4">
                      </a>
                   </div>
                   <!-- text -->
@@ -192,13 +213,13 @@
             <div class="s-12 l-3">
                <aside>
                   <!-- NEWS 1 -->
-                  <img src="img/DSC_7966.JPG" alt="fashion">
+                  <img src="img/Screenshot_20170519-004151.png" alt="fashion">
                   <div class="aside-block margin-bottom">
                      <h3>Entertainment Blog</h3>
                      <p>Multimedia Shadows is the first and only Multimedia University entertainment blog.This is the realest site that posts on what is hot and trending in MMU Kenya.This blog gives you the sneack sniff on the top ten prettiest chicks and top five hot dudes in Multimedia.Being the number one media and technology university,this blog gives you a diverse events line up and the best places to hang out.</p>
                   </div>
                   <!-- NEWS 2 -->
-                  <img src="img/DSCN9947.JPG" alt="News 2">
+                  <img src="img/IMG-20170517-WA0008-1.jpg" alt="News 2">
                   <div class="aside-block margin-bottom">
                      <h3>Scandal Slot!!</h3>
                      <p>Lorem ipsum dolor sit amet, conse ctetuer. Duis autem vemeu iriure dolor adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam</p>
