--- a/contact.html
+++ b/contact.html
@@ -77,7 +77,7 @@
                                  <p><i class="icon-home icon"></i> Multimedia university</p>
                                  <p><i class="icon-globe_black icon"></i> Rongai-Nairobi</p>
                                  <p><i class="icon-mail icon"></i> mmushadows@gmail.com</p>
-								 <p><i class="icon-phone icon"></i> 0790969873</p>
+								 <p><i class="icon-phone icon"></i> +254711199436</p>
                               </address>
                               <br />
                               <h4>Social</h4>
