--- a/post-1.html
+++ b/post-1.html
@@ -110,14 +110,14 @@
 
                      </p>
                       <img src="img/IMG-20170518-WA0011.jpg" alt="Fashion">
-                     <h2>5.Julliet</h2>
+                     <h2>5.Shaheen</h2>
                       <p>
                         Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum 
                         dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit 
                         augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming 
                         id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem.
                      </p>
-                      <img src="img/post3-big.jpg" alt="Fashion">
+                      <img src="img/IMG-20170512-WA0000.jpg" alt="Fashion">
                      <h2>4.Lattifah Kienja</h2>
                       <p>
                        Call it a mixture of a Samburu breed and a kikuyu, bringing the outward of the most perfect beauty in the campus. 
