--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
       <title>Multimedia Shadows| About Me
       </title>
       <meta name="description" content="Download free amazing responsive Fashion Blog template."/>
-      <meta name="keywords" content="free, responsive, blog, fashion"/>
+      <meta name="keywords" content="Multimedia University of kenya, kenyan campus, divas, mmu""/>
       <link rel="stylesheet" href="css/components.css">
       <link rel="stylesheet" href="css/responsee.css">
       <!-- CUSTOM STYLE -->       
