--- a/post-1.html
+++ b/post-1.html
@@ -6,7 +6,7 @@
       <title>Multimedia Shadows
       </title>
       <meta name="description" content="Take a look at all the Hot and trending stuff going around Multimedia University of Kenya.This is the number one blogspot featuring the craziest campus experience"/>
-      <meta name="keywords" content="free, responsive, blog, fashion"/>
+      <meta name="keywords" content="Multimedia University of kenya, kenyan campus, divas, mmu""/>
       <link rel="stylesheet" href="css/components.css">
       <link rel="stylesheet" href="css/responsee.css">
       <!-- CUSTOM STYLE -->       
