--- a/about.html
+++ b/about.html
@@ -5,8 +5,8 @@
       <meta name="viewport" content="width=device-width" />
       <title>Multimedia Shadows| About Me
       </title>
-      <meta name="description" content="Download free amazing responsive Fashion Blog template."/>
-      <meta name="keywords" content="Multimedia University of kenya, kenyan campus, divas, mmu""/>
+      <meta name="description" content="Take a look at all the Hot and trending stuff going around Multimedia University of Kenya.This is the number one blogspot featuring the craziest campus experience."/>
+      <meta name="keywords" content="Multimedia University of kenya, kenyan campus, divas, mmu"/>
       <link rel="stylesheet" href="css/components.css">
       <link rel="stylesheet" href="css/responsee.css">
       <!-- CUSTOM STYLE -->       
@@ -89,31 +89,30 @@
                      <a class="latest-posts" href="post-1.html">
                         <h5>Multimedia Top Ten Finest Divas</h5>
                         <p>
-                           Lorem ipsum dolor sit amet, consectetuer adipiscing elit...
+                         With its high number of diverse courses Multimedia University...
                         </p>
                      </a>
                      <a class="latest-posts" href="post-2.html">
                         <h5>Trend Setters</h5>
-                        <p>
-                           Ut wisi enim ad minim veniam, quis nostrud adipiscing...
+                        <p>These gentlemen and ladies define the elegance of dressing ..
                         </p>
                      </a>
                      <a class="latest-posts" href="post-3.html">
                         <h5>Finest Photography</h5>
                         <p>
-                           Duis autem vemeu iriure dolor adipiscing elit, sed diam...
+                           Ever found a hard time looking for the perfect photographers?..
                         </p>
                      </a>
                      <a class="latest-posts" href="post-4.html">
                         <h5>Multimedia Forbes List</h5>
                         <p>
-                           Lorem ipsum dolor sit amet, consectetuer adipiscing elit...
+                      Ever thought of the richest kids in the campus..
                         </p>
                      </a>
                      <a class="latest-posts" href="post-5.html">
                         <h5>Just for ladies!Mmu Hot Dudes</h5>
                         <p>
-                           Ut wisi enim ad minim veniam, quis nostrud adipiscing...
+                           Ladies we bring you the hottest gentlemen in the campus...
                         </p>
                      </a>
                   </div>
