--- a/post-2.html
+++ b/post-2.html
@@ -21,6 +21,16 @@
       <![endif]-->     
    </head>
    <body class="size-1140">
+   <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-98708265-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
       <!-- TOP NAV WITH LOGO -->          
       <header class="margin-bottom">
          <div class="line">
@@ -71,7 +81,7 @@
                      </div>
                      <!-- date -->                 
                      <div class="s-12 l-1 post-date">
-                        <p class="date">02</p>
+                        <p class="date">24</p>
                         <p class="month">May</p>
                      </div>
                   </div>
@@ -126,7 +136,7 @@
                   </div>
                   <!-- AD REGION --> 
                   <div class="advertising margin-bottom">
-                     <img src="img/IMG-20170430-WA0016.jpg" alt="ad banner">        
+                     <img src="img/IMG-20170522-WA0001.jpg" alt="ad banner">        
                   </div>
                   <!-- LATEST POSTS -->
                   <div class="aside-block margin-bottom">
@@ -134,31 +144,31 @@
                      <a class="latest-posts" href="post-1.html">
                         <h5>Multimedia Top Ten Finest Divas</h5>
                         <p>
-                           Lorem ipsum dolor sit amet, consectetuer adipiscing elit...
+                           With its high number of diverse courses Multimedia University...
                         </p>
                      </a>
                      <a class="latest-posts" href="post-2.html">
                         <h5>Trend Setters</h5>
-                        <p>
-                           Ut wisi enim ad minim veniam, quis nostrud adipiscing...
+                        <p>These gentlemen and ladies define the elegance of dressing 
+                          
                         </p>
                      </a>
                      <a class="latest-posts" href="post-3.html">
-                        <h5>Multimedia's Wannabes</h5>
+                        <h5>Finest Photography</h5>
                         <p>
-                           Duis autem vemeu iriure dolor adipiscing elit, sed diam...
+                        Ever found a hard time looking for the perfect photographers?..
                         </p>
                      </a>
                      <a class="latest-posts" href="post-4.html">
                         <h5>Multimedia Forbes List</h5>
                         <p>
-                           Lorem ipsum dolor sit amet, consectetuer adipiscing elit...
+                          Ever thought of the richest kids in the campus
                         </p>
                      </a>
                      <a class="latest-posts" href="post-5.html">
                         <h5>Just for ladies!Mmu Hot Dudes</h5>
                         <p>
-                           Ut wisi enim ad minim veniam, quis nostrud adipiscing...
+                                       Ladies we bring you the hottest gentlemen in the campus...
                         </p>
                      </a>
                   </div>
