--- a/post-3.html
+++ b/post-3.html
@@ -21,6 +21,16 @@
       <![endif]-->     
    </head>
    <body class="size-1140">
+   <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-98708265-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
       <!-- TOP NAV WITH LOGO -->          
       <header class="margin-bottom">
          <div class="line">
@@ -80,34 +90,16 @@
                      <p>
                      <h3>1.Ojwok Photography</h3>
                      <p>
-                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna 
-                        aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip 
-                        ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum 
-                        dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit 
-                        augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming 
-                        id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum.
+                        With his amazing act of photography,Ojwok is a naturally born photographer. Ojwok's  talent shine despite of the various competion from all the other great photographers in MMU.
                      </p>
                      <h3>2.The Travellers Photography</h3>
-                     <img src="img/JFKJ;JF;KDS.jpg" alt="Fashion">
+                     <img src="img/The Travellor 20170525_171407.jpg" alt="Fashion">
                      <p>
-                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna 
-                        aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip 
-                        ex ea commodo.
-                        Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum 
-                        dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit 
-                        augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming 
-                        id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem.
+                        I got nothing to say about the travellers.They are just owesome,These guys capture the finest detail of any model.
                      </p>
                        <h3>3.Doncliq Photography</h3>
-                     <img src="img/JFKJ;JF;KDS.jpg" alt="Fashion">
-                     <p>
-                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna 
-                        aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip 
-                        ex ea commodo.
-                        Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum 
-                        dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit 
-                        augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming 
-                        id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem.
+                     <img src="img/DSC_3751-1.jpg" alt="Fashion">
+                     <p>The third and still the best is doncliq.This guy does unique phootography,he captures beauty in every aspect of nature.
                      </p>
                      <p class="author">Responsee Team</p>
                   </div>
@@ -130,7 +122,7 @@
                   </div>
                   <!-- AD REGION --> 
                   <div class="advertising margin-bottom">
-                     <img src="img/IMG-20170502-WA0007.jpg" alt="ad banner">         
+                     <img src="img/IMG-20170522-WA0001.jpg" alt="ad banner">         
                   </div>
                   <!-- LATEST POSTS -->
                   <div class="aside-block margin-bottom">
@@ -138,31 +130,31 @@
                      <a class="latest-posts" href="post-1.html">
                         <h5>Multimedia Top Ten Finest Divas</h5>
                         <p>
-                           Lorem ipsum dolor sit amet, consectetuer adipiscing elit...
+                           With its high number of diverse courses Multimedia University...
                         </p>
                      </a>
                      <a class="latest-posts" href="post-2.html">
-                        <h5>Most Influential comrades</h5>
+                        <h5>Trend Setters</h5>
                         <p>
-                           Ut wisi enim ad minim veniam, quis nostrud adipiscing...
+                        These gentlemen and ladies define the elegance of dressing 
                         </p>
                      </a>
                      <a class="latest-posts" href="post-3.html">
                         <h5>Finest Photography</h5>
                         <p>
-                           Duis autem vemeu iriure dolor adipiscing elit, sed diam...
+                            Ever found a hard time looking for the perfect photographers?..
                         </p>
                      </a>
                      <a class="latest-posts" href="post-4.html">
                         <h5>Multimedia Forbes List</h5>
                         <p>
-                           Lorem ipsum dolor sit amet, consectetuer adipiscing elit...
+                           Ever thought of the richest kids in the campus
                         </p>
                      </a>
                      <a class="latest-posts" href="post-5.html">
                         <h5>Just for ladies!Mmu Hot Dudes</h5>
                         <p>
-                           Ut wisi enim ad minim veniam, quis nostrud adipiscing...
+              Ladies we bring you the hottest gentlemen in the campus...
                         </p>
                      </a>
                   </div>
