--- a/post-4.html
+++ b/post-4.html
@@ -21,6 +21,16 @@
       <![endif]-->     
    </head>
    <body class="size-1140">
+   <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-98708265-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
       <!-- TOP NAV WITH LOGO -->          
       <header class="margin-bottom">
          <div class="line">
@@ -92,20 +102,17 @@
                        <p>
                         Makes music the source of praising God and award winner at Grove Awards and by this makes singing the source of him to earn cash. 
                         </p>
-                      <img src="img/post1-big.jpg" alt="Fashion">
+                      <img src="img/IMG-20170525-WA0008.jpg" alt="Fashion">
                           <h2>4.Peter  Ombasa</h2>
                        <p>
                       Plays cool and his outsource of money comes also from the student hotels in the campus.
                      </p>
                       <img src="img/IMG-20170519-WA0093.jpg " alt="Fashion">
-                          <h2>5.James</h2>
+                          <h2>5.Felix Bett</h2>
                        <p>
-                        Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum 
-                        dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit 
-                        augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming 
-                        id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem.
+                        Closing the list is a third year BBIT student.Rumours have it that this selfmade richkid makes his money from Forex trading.
                      </p>
-                      <img src="img/post1-big.jpg" alt="Fashion">
+                      <img src="img/DSCN0035.jpg" alt="Fashion">
                      <p class="author">Anonymous</p>
                   </div>
                </article>
@@ -128,7 +135,7 @@
                   </div>
                   <!-- AD REGION --> 
                   <div class="advertising margin-bottom">
-                     <img src="img/IMG-20170502-WA0007.jpg" alt="ad banner">         
+                     <img src="img/IMG-20170522-WA0000.jpg" alt="ad banner">         
                   </div>
                   <!-- LATEST POSTS -->
                   <div class="aside-block margin-bottom">
@@ -136,31 +143,31 @@
                      <a class="latest-posts" href="post-1.html">
                         <h5>Multimedia Top Ten Finest Divas</h5>
                         <p>
-                           Lorem ipsum dolor sit amet, consectetuer adipiscing elit...
+                           With its high number of diverse courses Multimedia University...
                         </p>
                      </a>
                      <a class="latest-posts" href="post-2.html">
-                        <h5>Most Influential Comrades</h5>
+                        <h5>Trend Setters</h5>
                         <p>
-                           Ut wisi enim ad minim veniam, quis nostrud adipiscing...
+                   These gentlemen and ladies define the elegance of dressing ..
                         </p>
                      </a>
                      <a class="latest-posts" href="post-3.html">
                         <h5>Finest Photography</h5>
                         <p>
-                           Duis autem vemeu iriure dolor adipiscing elit, sed diam...
+                             Ever found a hard time looking for the perfect photographers?..
                         </p>
                      </a>
                      <a class="latest-posts" href="post-4.html">
                         <h5>Multimedia Forbes List</h5>
                         <p>
-                           Lorem ipsum dolor sit amet, consectetuer adipiscing elit...
+                      Ever thought of the richest kids in the campus..
                         </p>
                      </a>
                      <a class="latest-posts" href="post-5.html">
                         <h5>Just for ladies!Mmu Hot Dudes</h5>
                         <p>
-                           Ut wisi enim ad minim veniam, quis nostrud adipiscing...
+                                 Ladies we bring you the hottest gentlemen in the campus...
                         </p>
                      </a>
                   </div>
