--- a/contact.html
+++ b/contact.html
@@ -74,10 +74,10 @@
                            <div class="s-12 l-6">
                               <h4>White Panther</h4>
                               <address>
-                                 <p><i class="icon-home icon"></i> Multimedia university</p>
+                                 <p><i class="icon-home icon"></i> Multimedia Shadows</p>
                                  <p><i class="icon-globe_black icon"></i> Rongai-Nairobi</p>
-                                 <p><i class="icon-mail icon"></i> mmushadows@gmail.com</p>
-								 <p><i class="icon-phone icon"></i> +254711199436</p>
+                                 <p><i class="icon-mail icon"></i> marcusokoth@gmail.com</p>
+								 <p><i class="icon-phone icon"></i> 0790969873/+254711199436</p>
                               </address>
                               <br />
                               <h4>Social</h4>
